More SonarCloud findings fixed